--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 <body>
     <header> <!-- Etiqueta semantica de encabezado -->
-        <img src="./image/logo.jpg" alt="Logo hamburguesa" class="imagelogoheader animate__animated animate__bounce">
+        <img src="./image/logo.jpg" alt="Logo hamburguesa" class="imagelogoheader">
         <nav> <!-- Etiqueta semantica barra de navegación -->
             <ul class="navbar"> <!-- Etiqueta lógica lista desordenada -->
                 <li> <!-- Etiqueta lógica item de la lista -->
-                    <a target="_blank" href="#">Inicio</a>
+                    <a href="#">Inicio</a>
                 </li>
                 <li>
                     <a href="#">Quiénes somos</a>
@@ -92,35 +92,32 @@
         <a href="#top"><i class="fa-solid fa-arrow-up arrow-top"></i></a>
     </main>
     <footer>
-        <nav>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/" target="_blank">
-                        <button>
-                            <i class="fa-brands fa-instagram"></i>
-                            Instagram
-                        </button>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <button>
-                            <i class="fa-brands fa-facebook"></i>
-                            Facebook
-                        </button>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://web.whatsapp.com/" target="_blank">
-                        <button>
-                            <i class="fa-brands fa-whatsapp"></i>
-                            WhatsApp
-                        </button>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <p>Todos los derechos reservados</p>
+        <section class="listadoCartas2">
+            <article class="carta2">
+                <img src="./image/metodo-de-pago.png" alt="">
+                <div>
+                    <div>
+                    <h2>Metodo De Pago</h2>
+                    <p>...</p>
+                </div>
+            </article>
+            <article class="carta2 ">
+                <img src="./image/entrega-de-comida.png" alt="">
+                <div>
+                    <div>
+                    <h2>Delivery</h2>
+                    <p>...</p>
+                </div>
+            </article>
+            <article class="carta2">
+                <img src="./image/mapa.png" alt="">
+                <div>
+                    <div>
+                        <h2>Locales</h2>
+                        <p>...</p>
+                </div>
+            </article>
+        </section>
     </footer>
 </body>
 
